<resources>
    <string name="app_name">Crypto Exchange App</string>
    <string name="started_title">Welcome.</string>
    <string name="started_sub_title">Jumpstart on your Crypto Portfolio!
        <br><b>Login</b> with your existing account.</br>
        <br><b>Register</b> to create a new account.</br>
    </string>

    <string name="illustration_img">Image is of purple a bitcoin logo.</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="login_with_google">Login with Google</string>

    <!-- Strings for the login page -->
    <string name="login_title">Login to app</string>
    <string name="login_sub_title">
        <font color='#FB0333'><b>Login</b></font> if you already have an account.

    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>

    <string name="login_havent_account">
        You don\'t have an account <font color='#FB0333'><b>Register</b></font>
    </string>

    <!-- Strings for the registration page -->
    <string name="register_title">Create an account</string>

    <string name="register_sub_title">
        <font color='#FB0333'><b>Register</b></font> to create a new account.

    </string>
    <string name="register_fullname">Your full name</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>

    <string name="register_confirm_password">Confirm password</string>
    <string name="register_have_account">I already have an account <font color='#FB0333'><b>Login</b></font></string>

    <!-- Strings for the home page -->
    <string name="home_title">Hello World!</string>
    <string name="home_sub_title">Welcome to Michael\'s Crypto app.</string>
    <string name="btn_logout">Logout</string>

    <!-- Strings for the reset password page -->
    <string name="reset_pw_title">Reset your password</string>
    <string name="reset_pw_sub_title">
        <font color='#FB0333'><b>Reset Password </b></font>
        <br>\n If you forgot your password.</br>
    </string>
    <string name="btn_reset_pw">Reset Password</string>

    <string name="back_to_login">
        Back to <font color='#FB0333'><b>Login</b></font>
    </string>

    <string name="webclient_id">
        758072190390-pgupqvrnks2cv1kkcid9n15p2k3mseu2.apps.googleusercontent.com
    </string>


    <!-- Strings for the dashboard menu -->
    <string name="favourites">Favourites</string>
    <string name="recent">Recent</string>
    <string name="my_files">My files</string>
    <string name="backups">Backups</string>
    <string name="langauge">Langauge</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="shared_with_me">Shared with me</string>

    <!-- Fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search...</string>
    <string name="not_found">Not found.</string>


    <!-- Error messages. -->
    <string name="error_passwords_not_match">The passwords are not the same</string>
    <string name="error_email_not_valid">Email not valid</string>
    <string name="error_name_empty">Name cannot be empty</string>
    <string name="biometric_not_available">No Fingerprint Scanner</string>
    <string name="_1h">1 Hour</string>
    <string name="_15m">15 min</string>
    <string name="_1m">1 min</string>
    <string name="_1w">1 Week</string>
    <string name="_1d">1 Day</string>
    <string name="_4h">4 Hour</string>
    <string name="_3_hours">3 Hours</string>
    <string name="_12_hours">12 Hours</string>
    <string name="daily">Daily</string>
    <string name="_1_mon">1 Mon</string>

</resources>