<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:padding="0dp"
    android:gravity="center"
    tools:openDrawer="start"
    android:fontFamily="@font/montserrat"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">


        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textAlignment="center"
            style="@style/Title"
            android:textColor="@color/white"
            android:layout_marginTop="200dp"
            />

        <TextView
            android:id="@+id/home_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_sub_title"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="250dp"
            style="@style/SubTitle"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            style="@style/ButtonRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/btn_logout"
            android:padding="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

             />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="top|center"
            app:navigationIcon="@drawable/baseline_menu_24"
            app:title="Dashboard"
            app:titleTextColor="@color/white"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_nav_header"
        app:menu="@menu/drawer_nav_menu"
        android:background="@color/black"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        android:fontFamily="@font/montserrat"
        android:layout_marginLeft="-64dp"
        android:paddingLeft="0dp"
        />



</androidx.drawerlayout.widget.DrawerLayout>



<!--

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Drawer Navigation"
                app:navigationIcon="@drawable/baseline_menu_24"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
                />


-->